# wichita-poc

./: .gitignore  index.html  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  lib.rs  main.rs
src/components/: description-list.tsx  fieldset.tsx  select.tsx  textarea.tsx
