[package]
name = "wichita-poc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wichita_poc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
callm = { version = "0.2.0", features = ["metal"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
ollama-rs = "0.2.1"
diffusers = "0.3.1"
tch = "0.13"
torch-sys = { version = "0.13", features = ["download-libtorch"] }
image = "0.25.3"
imageproc = "0.25.0"

